--- a/{{cookiecutter.name}}/main.tex
+++ b/{{cookiecutter.name}}/main.tex
@@ -90,9 +90,9 @@
 %% Colors that work well
 %% xcolor: MidnightBlue, Sepia 
 \usepackage[colorlinks=true, 
-			urlcolor=MidnightBlue, 
-			linkcolor=MidnightBlue,
-			citecolor=MidnightBlue]{hyperref} 
+			urlcolor=MyBlue, 
+			linkcolor=MyBlue,
+			citecolor=MyBlue]{hyperref} 
 
 %% ======================================
 %% SECTIONS
@@ -127,8 +127,8 @@
 \renewcommand{\headrulewidth}{0.25pt} %% set to 0pt to get rid of line
 \renewcommand{\footrulewidth}{0.25pt}
 %% color for line
-\renewcommand{\headrule}{\hbox to\headwidth{\color{MidnightBlue}\leaders\hrule height \headrulewidth\hfill}}
-\renewcommand{\footrule}{\hbox to\headwidth{\color{MidnightBlue}\leaders\hrule height \footrulewidth\hfill}}
+\renewcommand{\headrule}{\hbox to\headwidth{\color{MyBlue}\leaders\hrule height \headrulewidth\hfill}}
+\renewcommand{\footrule}{\hbox to\headwidth{\color{MyBlue}\leaders\hrule height \footrulewidth\hfill}}
 
 %% make the plain style fancy too
 \fancypagestyle{plain}{%
