changed font again

--- a/{{cookiecutter.name}}/main.tex
+++ b/{{cookiecutter.name}}/main.tex
@@ -68,9 +68,8 @@
 %% FONT
 %% UNCOMMENT, to turn on sans serif font
 %\usepackage{helvet}
-%\renewcommand{\familydefault}{\sfdefault}
-\usepackage{fontspec}
-\setmainfont{HelveticaNeueLight}
+\usepackage{lmodern}
+\renewcommand*\familydefault{\sfdefault}
 
 % use OpenSans if available
 %\defaultfontfeatures{
