--- a/{{cookiecutter.name}}/main.tex
+++ b/{{cookiecutter.name}}/main.tex
@@ -68,8 +68,12 @@
 %% FONT
 %% UNCOMMENT, to turn on sans serif font
 %\usepackage{helvet}
-\usepackage{lmodern}
-\renewcommand*\familydefault{\sfdefault}
+%\usepackage{lmodern}
+%\renewcommand*\familydefault{\sfdefault}
+
+\usepackage{libertine}
+\renewcommand*\familydefault{\sfdefault}  %% Only if the base font of the document is to be sans serif
+
 
 % use OpenSans if available
 %\defaultfontfeatures{
